CHANGELOG
=========

3.7.1 (2019-10-04)
------------------

* [FIXED] #6333 Images are now shown in the description
* [FIXED] #6250 Fix typo in 'extended' [github pull #32 @germanvaleroelizondo]
* [FIXED] #6209 space added between save approval and revert button
* [FEATURE] #6208 approval select boxes are now left of column instead of center
* [FIXED] #6205 list of files and approval select boxes are now aligned


3.7.0 (2019-08-07)
------------------

* [BUG] #6207 publication layout bug after changing approval fixed
* [BUG] #6206 notifications with groups fixed
* [FEATURE] #6126 added support for report-editdates
* [FEATURE] #4995 notification on file-status change for student
* [FEATURE] #4730 notification on file-upload for teacher
* [FEATURE] #4731 extended logs


3.6.1 (2019-05-15)
------------------

* [FIXED] #6015 remove setting to show id
* [FIXED] #6035 auto-reload on groupfilter-change


3.6.0 (2019-02-01)
------------------

* Moodle 3.6 compatible version
* [FIXED] #5951 remove strong-tags in labels due to flexbox not displaying spaces around them
* [FIXED] #6014 fix help icon related to column status being displayed the column before
* [FEATURE] #5835 context locking now affects publication too (some capabilities were defined as reading instead of writing)!
* [FEATURE] #5758 add new core_userlist_provider methods to privacy provider
* [FEATURE] #6025 privacy API updates (#5758) are now covered by unit tests
* [UPDATE] #5638 update .travis.yml
* [UPDATE] #5952 update accepted file types help text and label
* [UPDATE] #6029 update README.md
* [CHANGED] #5638 strip leading slashes from namespaces and use statements
* [CHANGED] #6025 reorganized unit tests


3.5.0 (2018-07-18)
------------------

* Moodle 3.5 compatible version
* [CHANGED] #5134 removed german lang file from repository
* [FEATURE] #5386 implemented privacy API


3.4.0 (2017-12-13)
------------------

* Moodle 3.4 compatible version