@@ -4,6 +4,7 @@ CHANGELOG
 3.7.1 (2019-10-04)
 ------------------
 
+* [FIXED] #6295 Fix typo in receiveteachernotification capability and add langstring for it
 * [FIXED] #6333 Images are now shown in the description
 * [FIXED] #6250 Fix typo in 'extended' [github pull #32 @germanvaleroelizondo]
 * [FIXED] #6209 space added between save approval and revert button
